<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#000000"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="86dp"
        android:layout_height="81dp"
        app:layout_constraintBottom_toTopOf="@+id/mainTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@drawable/espiral" />

    <TextView
        android:id="@+id/description"
        android:layout_width="271dp"
        android:layout_height="36dp"
        android:fontFamily="@font/zector"
        android:text="Ingrese un número"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/button"
        android:layout_width="267dp"
        android:layout_height="54dp"
        android:fontFamily="@font/zector"
        android:text="Calcular"
        android:textSize="12pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="361dp"
        android:layout_height="77dp"
        android:fontFamily="@font/zector"
        android:text="FIBONACCI"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <EditText
        android:id="@+id/number"
        android:layout_width="89dp"
        android:layout_height="100dp"
        android:background="@color/cardview_dark_background"
        android:ems="10"
        android:fontFamily="@font/zector"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.003"
        />

    <LinearLayout
        android:layout_width="281dp"
        android:layout_height="264dp"
        android:orientation="vertical"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="106dp"
                android:layout_height="175dp"
                android:layout_weight="1"
                android:textAlignment="textStart"
                app:srcCompat="@drawable/fibonacci" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="128dp"
                android:layout_height="174dp"
                android:layout_weight="1"
                android:fontFamily="@font/zector"
                android:text="Se trata de una secuencia infinita de números naturales; a partir del 0 y el 1 se van sumando a pares de manera que cada número es igual a la suma de sus dos anteriores"
                android:textAlignment="gravity"
                android:textColor="#ffffff"
                android:textSize="8.4pt"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:fontFamily="@font/zector"
            android:text="1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597..."
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="8pt"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
